Fixed spacing issues

--- a/app/assets/dev/styles/base/_global.scss
+++ b/app/assets/dev/styles/base/_global.scss
@@ -8,14 +8,16 @@ html {
 }
 body {
     font-family: montserrat, roboto, sans-serif;
-    // width: 100vw;
     position: relative;
     margin: 0;
     padding: 0;
-    // box-sizing: border-box;
-    // min-height: 100vh;
-    // width: 100%;
+    display: grid;
+    justify-items: center;
 }
+.container {
+    width: 98%;
+}
+
 img {
     max-width: 100%;
     height: auto;
