--- a/app/assets/dev/styles/modules/_featured-products.scss
+++ b/app/assets/dev/styles/modules/_featured-products.scss
@@ -1,17 +1,14 @@
 .featured-products {
     margin-top: 6.7rem;
-    font-weight: 100;
     margin-bottom: 20rem;
-    // position: relative;
-    // left: 2rem;
-    // text-align: center;
-    
+    width: 100%;
 
     &__title {
         text-align: center;
         margin-bottom: 3.3rem;
         font-size: 3.4rem;
         color: $mainBlue;
+        // background-color: palegreen;
     }
     &--dimension {
        width: 24.0rem;
@@ -19,10 +16,10 @@
     }
     &-5 {
         display: grid;
-        grid-template-columns: repeat(5, 20%);
+        grid-template-columns: 1fr 1fr 1fr 1fr auto;
         grid-template-rows: repeat(2, 50%);
         grid-row-gap: 14.6rem;
-        justify-items: center;
+        // background-color: palegreen;
     }
     &__product-title {
         margin-top: 2.5rem;
