--- a/app/assets/dev/styles/modules/_functions.scss
+++ b/app/assets/dev/styles/modules/_functions.scss
@@ -1,5 +1,5 @@
 .functions {
-    width: 98%;
+    width: 100%;
     height: 8.7rem;
     margin-bottom: 5rem;
     color: $mainBlue;
@@ -8,8 +8,6 @@
     justify-content: space-around;
     align-items: center;
     font-size: 1.8rem;
-    position: relative;
-    left: 1vw;
 
     .fa, .fas {
         color: lighten($haclight, 40%);
