--- a/app/assets/dev/styles/modules/_main-header.scss
+++ b/app/assets/dev/styles/modules/_main-header.scss
@@ -5,7 +5,7 @@
     align-items: center;
     font-size: 1.4rem;
     font-weight: lighter;
-    padding: 1.5rem 1.6rem;
+    padding: 1.5rem 0;
     // background: yellow;
     &__main-nav {
         display: flex;
