--- a/app/assets/dev/styles/modules/_main-hero.scss
+++ b/app/assets/dev/styles/modules/_main-hero.scss
@@ -1,10 +1,8 @@
 .main-hero {
    position: relative;
-   width: 98%;
    
    &__hero-image {
-   position: relative;
-   left: 1vw;
+
    }
    &__title {
       width: 52.8rem;
