--- a/app/assets/dev/styles/modules/_second-hero.scss
+++ b/app/assets/dev/styles/modules/_second-hero.scss
@@ -4,7 +4,7 @@
    
     &--img {
         background: url(../../dev/images/bg_specials-h2.jpg) no-repeat center center;
-        width: 98%;
+        width: 100%;
         height: 61rem;
         font-size: 10rem;
 
