--- a/app/assets/dev/styles/modules/_second-nav.scss
+++ b/app/assets/dev/styles/modules/_second-nav.scss
@@ -1,5 +1,5 @@
 .second-nav {
-    width: 98%;
+    width: 100%;
     height: 34.1rem;
     margin-bottom: 6rem;
     color: $mainBlue;
@@ -8,8 +8,6 @@
     justify-content: space-around;
     align-items: center;
     font-size: 1.8rem;
-    position: relative;
-    left: 1vw;
 
     &__address {
         display: grid;
