--- a/app/assets/dev/styles/modules/_sponsors.scss
+++ b/app/assets/dev/styles/modules/_sponsors.scss
@@ -1,14 +1,11 @@
 .sponsors {
-    width: 98%;
+    width: 100%;
     height: 8.7rem;
     margin-bottom: 9rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-size: 1.8rem;
-    position: relative;
-    left: 1vw;
-
     img {
         opacity: .5;
         
