--- a/app/assets/prod/styles/main-style.css
+++ b/app/assets/prod/styles/main-style.css
@@ -4957,7 +4957,12 @@ body {
   font-family: montserrat, roboto, sans-serif;
   position: relative;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  display: grid;
+  justify-items: center; }
+
+.container {
+  width: 98%; }
 
 img {
   max-width: 100%;
@@ -4975,7 +4980,7 @@ li {
   align-items: center;
   font-size: 1.4rem;
   font-weight: lighter;
-  padding: 1.5rem 1.6rem; }
+  padding: 1.5rem 0; }
 
 .main-header__main-nav {
     display: flex; }
@@ -5031,12 +5036,7 @@ li {
       align-items: center; }
 
 .main-hero {
-  position: relative;
-  width: 98%; }
-
-.main-hero__hero-image {
-    position: relative;
-    left: 1vw; }
+  position: relative; }
 
 .main-hero__title {
     width: 52.8rem;
@@ -5057,8 +5057,8 @@ li {
 
 .featured-products {
   margin-top: 6.7rem;
-  font-weight: 100;
-  margin-bottom: 20rem; }
+  margin-bottom: 20rem;
+  width: 100%; }
 
 .featured-products__title {
     text-align: center;
@@ -5072,10 +5072,9 @@ li {
 
 .featured-products-5 {
     display: grid;
-    grid-template-columns: repeat(5, 20%);
+    grid-template-columns: 1fr 1fr 1fr 1fr auto;
     grid-template-rows: repeat(2, 50%);
-    grid-row-gap: 14.6rem;
-    justify-items: center; }
+    grid-row-gap: 14.6rem; }
 
 .featured-products__product-title {
     margin-top: 2.5rem;
@@ -5107,7 +5106,7 @@ li {
 
 .second-hero--img {
     background: url(../../dev/images/bg_specials-h2.jpg) no-repeat center center;
-    width: 98%;
+    width: 100%;
     height: 61rem;
     font-size: 10rem;
     display: flex;
@@ -5269,7 +5268,7 @@ li {
     color: #666; }
 
 .functions {
-  width: 98%;
+  width: 100%;
   height: 8.7rem;
   margin-bottom: 5rem;
   color: #142165;
@@ -5277,9 +5276,7 @@ li {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 1.8rem;
-  position: relative;
-  left: 1vw; }
+  font-size: 1.8rem; }
 
 .functions .fa, .functions .fas {
     color: #cccccc;
@@ -5296,15 +5293,13 @@ li {
     margin-right: 8rem; }
 
 .sponsors {
-  width: 98%;
+  width: 100%;
   height: 8.7rem;
   margin-bottom: 9rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 1.8rem;
-  position: relative;
-  left: 1vw; }
+  font-size: 1.8rem; }
 
 .sponsors img {
     opacity: .5; }
@@ -5316,13 +5311,15 @@ li {
       margin-right: 8rem; }
 
 .newsletter {
+  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-items: center;
+  grid-template-columns: 1fr auto;
   margin-bottom: 7.8rem; }
 
 .newsletter__email {
-    text-align: center; }
+    margin-left: 5rem;
+    text-align: center;
+    width: 60.6rem; }
 
 .newsletter__email__title {
       font-size: 2.9rem;
@@ -5365,7 +5362,9 @@ li {
       z-index: 6; }
 
 .newsletter__social {
-    text-align: center; }
+    margin-right: 5rem;
+    text-align: center;
+    width: 60.6rem; }
 
 .newsletter__social__title {
       font-size: 2.9rem;
@@ -5387,17 +5386,20 @@ li {
         height: 4.5rem;
         border-radius: 50%;
         border: 1px solid #b3b3b3;
+        margin-right: 2rem;
         display: flex;
         justify-content: center;
-        align-items: center;
-        margin-right: 2rem; }
+        align-items: center; }
+
+.newsletter__social__icons .icon:last-of-type {
+          margin-right: 0; }
 
 .newsletter__social__icons .fa, .newsletter__social__icons .fab {
         font-size: 2.2rem;
         color: #666; }
 
 .second-nav {
-  width: 98%;
+  width: 100%;
   height: 34.1rem;
   margin-bottom: 6rem;
   color: #142165;
@@ -5405,9 +5407,7 @@ li {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 1.8rem;
-  position: relative;
-  left: 1vw; }
+  font-size: 1.8rem; }
 
 .second-nav__address {
     display: grid;
